manifest/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: education-front
  name: education-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: education-front
  template:
    metadata:
      labels:
        app: education-front
    spec:
      containers:
        - env:
            - name: REACT_APP_BACKEND_URL
              value: "http://academy.back.com"
          image: yscrmetachatbot001.azurecr.io/yscrmetachatbotback001:{#version#}
          name: education-front-container
          ports:
            - containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: registry-creds

---

apiVersion: v1
kind: Service
metadata:
  name: education-front-svc
spec:
  ports:
    - name: front
      protocol: TCP
      port: 80
  selector:
    app: education-front
  type: ClusterIP
