manifest/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - args:
            - '--dbpath'
            - /data/db
            - '--auth'
          image: mongo:7.0.1
          imagePullPolicy: IfNotPresent
          name: mongo
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data-dir
      volumes:
        - name: mongo-data-dir
          persistentVolumeClaim:
            claimName: mongo-data
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP
