manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "academy.backend.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: education-back-svc
            port:
              number: 5000
  - host: "academy.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: education-front-svc
            port:
              number: 80
